# T9-Combinatoric-Solver

./: Cargo.toml  small_list.json
src/: README.md  bin_ary_tree.rs  evaluate.rs  freq_list.rs  globals.rs  heuristic_evaluate.rs  main.rs  new_evaluate.rs  new_solver.rs  node.rs  node_iterator.rs  scorecast.rs  scorecast_new.rs  set32.rs  solver.rs  tree_iterator.rs  tree_layer.rs  util.rs
