[package]
name = "mozart_dfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
lazy_static = "1.4.0"
ordered-float = "4.2.0"
parking_lot = "0.12.2"
rand = "0.8.5"
rayon = "1.10.0"
serde_json = "1.0.116"
sysinfo = "0.30.11"
